<resources>
    <string name="app_name">HardServer</string>
    <string name="server_started">Server started (127.0.0.1, port 12345)</string>
    <string name="server_stopped">Server stopped (127.0.0.1, port 12345)</string>
    <string name="server_not_started">Error! Server cannot start!</string>
    <string name="server_not_stopped">Error! Server not stopped!</string>
    <string name="start_server">Start Server (127.0.0.1, port 12345)</string>
    <string name="stop_server">Stop Server (127.0.0.1, port 12345)</string>
    <string name="total_orders">" Number of orders: "</string>
    <string name="order_count">Order number:</string>
    <string name="find_order">Find order</string>
</resources>
